[package]
name = "hs-client-gql"
version = "0.0.0"
edition = "2021"
authors = ["gql <gql@gamescilite.com>"]
publish = false

[features]
graphql-enum = []
graphql = ["async-graphql-actix-web", "entity_graphql"]
metrics = [
    "actix-web-opentelemetry",
    "opentelemetry/metrics",
    "opentelemetry-prometheus",
    "prometheus",
    "dep:opentelemetry_sdk",
    "opentelemetry-otlp",
]
default = ["metrics", "graphql"]

[dependencies]
#====core====
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
lazy_static = "1.5.0"
dotenv = "0.15.0"
awc = { version = "3.7", features = ["rustls-0_21"] }
url = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
#====log====
log = "0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"
tracing-appender = "0.2.2"
tracing-loki = { version = "0.2.6", default-features = false, features = [
    "rustls",
    "compat-0-2-1",
] }
#====db====
sea-orm = { version = "1", features = [
    "runtime-actix-rustls",
    "sqlx-postgres",
    "macros",
    "with-json",
], default-features = false }
#=====redis=====
redis = { version = "0.32", default-features = false, features = [
    "r2d2",
    "tokio-comp",
    "connection-manager",
] }
#=====metrics=====
tonic = "0.13"
actix-web-opentelemetry = { version = "0.21.0", default-features = false, optional = true, features = [
    "metrics-prometheus",
] }
opentelemetry = { version = "0.28", default-features = false, features = [
    "trace",
] }
opentelemetry-prometheus = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", optional = true, features = [
    "metrics",
    "rt-tokio-current-thread",
    "spec_unstable_metrics_views",
] }
prometheus = { version = "0.13", default-features = false, optional = true }
opentelemetry-otlp = { version = "0.28", features = [
    "grpc-tonic",
], optional = true }

# ========feature-dep========
[dependencies.static-remote]
package = "static-remote"
git = "https://github.com/dwbmio/crate-r-svr-api.git"
rev = "27ed85183eff0d7ca27a578b9914c40dd7fa7c4f"

[dependencies.entity_graphql]
path = "entity_graphql"
optional = true
default-features = false

[dependencies.seaography]
git = "https://git.7k7k.com/starlink/seagraphy.git"
rev = "f73c0f171fda69e7374e65e84101b46d876f3d86"
features = ["with-decimal", "with-chrono", "with-json", "with-postgres-array"]

[dependencies.async-graphql-actix-web]
version = "7.0"
optional = true
default-features = false

#========generate-codes========
[dev-dependencies]
opentelemetry-stdout = { version = "0.30", features = ["trace", "metrics"] }
serde_json = { version = "1" }
